--- a/app/config.global.yml
+++ b/app/config.global.yml
@@ -38,6 +38,8 @@ parameters:
         api.queue: 0 # the queue api uses no caching
         api.queue.refresh: 0 # the queue api uses no caching
 
+    permissions.cache.ttl: 600
+
     # base58
     unique.alphabet: '123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ'
 
