Fix nav pref cookie

--- a/app/di.yml
+++ b/app/di.yml
@@ -120,6 +120,7 @@ services:
     class: 'QL\Hal\Twig\HalExtension'
     arguments:
       - @slim.request
+      - @slim.cookies
       - @url.helper
       - @time.helper
       - @session
