--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -482,7 +482,7 @@ services:
 
   user.preferences.handle:
     class: 'QL\Hal\Controllers\User\EditPreferencesHandle'
-    arguments: [@slim, @url.helper]
+    arguments: [@slim.cookies, @url.helper]
 
   user.settings.page:
     class: 'QL\Hal\Controllers\User\SettingsController'
