Set cookie prefs for 5 years

--- a/app/config.global.yml
+++ b/app/config.global.yml
@@ -47,3 +47,4 @@ parameters:
     # Cookie settings
     session.cookie.configuration:
         lifetime: '1 day'
+    cookie.preferences.ttl: '5 years'
