Add hooks for serious business mode

--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -484,6 +484,7 @@ services:
     class: 'QL\Hal\Controllers\User\EditPreferencesHandler'
     arguments:
         - @slim.cookies
+        - @session
         - @url.helper
         - %cookie.preferences.ttl%
 
