Save nav pref as json so new features on the menu will show by default

--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -489,6 +489,7 @@ services:
       - @name.helper
       - @currentUser
       - %cookie.preferences.ttl%
+      - %navigation.list%
 
   user.settings.page:
     class: 'QL\Hal\Controllers\User\SettingsController'
