Add temp random id generator to make DI work...

--- a/app/di.yml
+++ b/app/di.yml
@@ -48,9 +48,13 @@ services:
     class: 'QL\Hal\Doctrine\EntityChangeLogger'
     arguments: [@user.helper]
 
+  # @todo make a real one, just make it work for now
+  doctrine.random.id:
+    class: 'QL\Hal\Doctrine\RandomId'
+
   doctrine.persist.listener:
     class: 'QL\Hal\Core\Entity\Listener\EntityPersistListener'
-    arguments: [@clock]
+    arguments: [@clock, @doctrine.random.id]
 
   ######################################################################################################################
   # APPLICATION
