Add route for pageless logs

--- a/app/routes.yml
+++ b/app/routes.yml
@@ -31,7 +31,12 @@ parameters:
 
         logs:
             method: 'GET'
-            route: '/logs(/page/:page)'
+            route: '/logs'
+            stack: ['admin.bouncer', 'logs.page']
+
+        logs.page:
+            method: 'GET'
+            route: '/logs/page/:page'
             stack: ['admin.bouncer', 'logs.page']
             conditions: {page: '[0-9]+'}
 
